// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField wrapper component handles invalid dates day and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={1}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2001}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is a leap day but not a leap year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={1}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2019}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is invalid for month and year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={NaN}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={NaN}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={NaN}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={1}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2000}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates empty date 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue=""
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue=""
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue=""
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month and day are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={1}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={1}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2000}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={1}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2001}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={NaN}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={NaN}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={NaN}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month is out of range 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={NaN}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={NaN}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={NaN}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is 3 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={3}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={200}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is 5 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={3}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={20000}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={3}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={3}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={2001}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component passes other props along to design system component 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={17}
  dayInvalid={false}
  dayLabel="THE DAY"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint=""
  label="Date"
  monthDefaultValue={9}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={1944}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component renders properly with defaults 1`] = `
<DateField
  dateFormatter={[Function]}
  dayDefaultValue={6}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage=""
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthDefaultValue={6}
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onBlur={[Function]}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearDefaultValue={1944}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;
